--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+* {
+  margin: 0%;
+}
+
 body {
+  background-color: rgb(234, 237, 237);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +15,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+a{
+  text-decoration: none;
 }
